<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">stimulatorremotecontrol</string>
    <string name="app_title">Remote stimulator control</string>
    <string name="app_author">Tým snů</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving application…</string>
    <string name="lost_connection">Connection lost…</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="menu_main_connect">connect</string>
    <string name="menu_main_disconnect">disconnect</string>
    <string name="nav_drawer_open">Open sidebar</string>
    <string name="nav_drawer_close">Close sidebar</string>
    <string name="nav_drawer_title_1">Experiments</string>
    <string name="nav_drawer_title_2">Options</string>
    <string name="nav_text_item_1">ERP</string>
    <string name="nav_text_item_2">BCI</string>
    <string name="nav_text_item_2_1">f-VEP</string>
    <string name="nav_text_item_2_2">t-VEP</string>
    <string name="nav_text_item_2_3">c-VEP</string>
    <string name="nav_text_item_3">Reaction experiment</string>
    <string name="nav_text_item_4">Autostimulation</string>
    <string name="nav_text_item_5">Biosensor logger</string>
    <string name="nav_text_item_6">Test mode</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_help">Help</string>
    <string name="nav_text_about">About</string>
    <string-array name="nav_text_array">
        <item>@string/nav_text_item_1</item>
        <item>@string/nav_text_item_2_1</item>
        <item>@string/nav_text_item_2_2</item>
        <item>@string/nav_text_item_2_3</item>
        <item>@string/nav_text_item_3</item>
        <item>@string/nav_text_item_4</item>
        <item>@string/nav_text_item_5</item>
        <item>@string/nav_text_item_6</item>
        <item>@string/nav_text_settings</item>
        <item>@string/nav_text_help</item>
        <item>@string/nav_text_about</item>
    </string-array>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="version">Version: <xliff:g id="app_version">%1$s</xliff:g></string>
    <string-array name="help_parents">
        <item>@string/nav_text_item_1</item>
        <item>@string/nav_text_item_2</item>
        <item>@string/nav_text_item_3</item>
        <item>@string/nav_text_item_4</item>
        <item>@string/nav_text_item_5</item>
        <item>@string/nav_text_item_6</item>
    </string-array>
    <string name="language_change">Change language</string>
    <string name="screen_title_schema">Configuration ERP</string>
    <string name="screen_title_fvep">Configuration f-VEP</string>
    <string name="screen_title_tvep">Configuration t-VEP</string>
    <string name="screen_title_cvep">Configuration c-VEP</string>
    <string name="screen_title_rea">Configuration reaction exp.</string>
    <string name="screen_title_general_settings">General settings</string>
    <string name="screen_title_output_settings">Output settings</string>
    <string name="screen_title_settings_1">Settings 1</string>
    <string name="screen_title_settings_2">Settings 2</string>
    <string name="output_title_count">Output count</string>
    <string name="output_title_stimul_count">Stimul count</string>
    <string name="output_title_puls_up">Pulse - up [ms]</string>
    <string name="output_title_puls_down">Pulse - down [ms]</string>
    <string name="output_title_distribution_value">Distribution - value [ms]</string>
    <string name="output_title_distribution_delay">Distribution - delay [%]</string>
    <string name="output_title_brightness">Brightness [%]</string>
    <string name="output_title_frequency">Frequency (0 – 255)</string>
    <string name="output_title_duty_cycle">Duty cycle (0 – 255)</string>
    <string name="output_title_cycle_count">Cycle count</string>
    <string name="output_title_wait_fixed">Wait - fixed</string>
    <string name="output_title_wait_random">Wait - random</string>
    <string name="output_title_miss_time">Miss time [ms]</string>
    <string name="output_title_on_fail">On fail</string>
    <string name="output_title_on_fail_continue">Continue</string>
    <string name="output_title_on_fail_wait">Wait</string>
    <string name="output_title_sex">Sex</string>
    <string name="output_title_sex_male">Male</string>
    <string name="output_title_sex_female">Female</string>
    <string name="out">Out</string>
    <string name="wait">Wait</string>
    <string name="puls_length">Puls length [ms]</string>
    <string name="bit_shift">Bit shift</string>
    <string name="time_between">Time between [ms]</string>
    <string name="pattern">. Pattern</string>
    <string name="pattern_32_bit">Pattern 32 bit</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="save_all">Save all</string>
    <string name="save_values">Save values</string>
    <string name="export">Export</string>
    <string name="output_type">Parameter type</string>
    <string name="context_options">Options</string>
    <string name="context_set_name">Set name</string>
    <string-array name="erp_screen_titles">
        <item>@string/screen_title_schema</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <string name="erp_screen_2_random">Random</string>
    <string-array name="erp_screen_2_random_values">
        <item>OFF</item>
        <item>Short</item>
        <item>Long</item>
        <item>Short and long</item>
    </string-array>
    <string name="erp_screen_2_edge">Edge</string>
    <string-array name="erp_screen_2_edge_values">
        <item>Leading</item>
        <item>Falling</item>
    </string-array>
    <string-array name="erp_screen_3_output_types">
        <item>@string/output_title_puls_up</item>
        <item>@string/output_title_puls_down</item>
        <item>@string/output_title_distribution_value</item>
        <item>@string/output_title_distribution_delay</item>
        <item>@string/output_title_brightness</item>

    </string-array>
    <string name="erp_screen_3_output">. OUTPUT</string>
    <string-array name="bci_fvep_screen_titles">
        <item>@string/screen_title_fvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <string-array name="bci_fvep_screen_3_output_types">
        <item>@string/output_title_puls_up</item>
        <item>@string/output_title_puls_down</item>
        <item>@string/output_title_frequency</item>
        <item>@string/output_title_duty_cycle</item>
        <item>@string/output_title_brightness</item>

    </string-array>
    <string name="bci_fvep_screen_3_output">. STIMUL</string>
    <string-array name="bci_tvep_screen_titles">
        <item>@string/screen_title_tvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <string name="bci_tvep_screen_2_pattern_length">Pattern length</string>
    <string-array name="bci_cvep_screen_titles">
        <item>@string/screen_title_cvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <string-array name="rea_screen_titles">
        <item>@string/screen_title_rea</item>
        <item>@string/screen_title_settings_1</item>
        <item>@string/screen_title_settings_2</item>
    </string-array>
    <string-array name="rea_screen_3_fail_type">
        <item>@string/output_title_on_fail_continue</item>
        <item>@string/output_title_on_fail_wait</item>
    </string-array>
    <string-array name="rea_screen_3_sex">
        <item>@string/output_title_sex_male</item>
        <item>@string/output_title_sex_female</item>
    </string-array>
    <string name="exception_general">Failed to perform action</string>
    <string name="exception_out_of_range">Value is out of range</string>
    <string name="unknown_device">Device not recognized</string>
    <string name="bluetooth_off">Bluetooth is off</string>
    <string name="turn_on">Turn on</string>
    <string name="illegal_input">Illegal input</string>
    <string name="configuration_was_deleted">Configuration was deleted</string>
    <string name="count_saved_configuration">Count of saved configurations: <xliff:g id="saved_conf_count">%1$s</xliff:g></string>
    <string name="values_were_saved">Values were saved to: <xliff:g id="config_name">%1$s</xliff:g></string>
    <string name="help_erp">popis ERP...\n</string>
    <string name="help_erp_hrana"><b><i>Hrana</i></b> = Sestupně: ..., Vzestupně: ...</string>
    <string name="help_erp_value">Value = OUT: ..., WAIT: ...</string>
    <string name="help_erp_nahodnost">Náhodnost: Vypnuto: ..., Krátká: ..., Dlouhá: ..., Krátká i Dlouhá: ...</string>
    <string name="help_erp_pulse_up">Pulse - UP: doba v [ms] po kterou je výstup aktivní</string>
    <string name="help_erp_pulse_down">Pulse - DOWN: doba v [ms] po kterou je výstup neaktivní</string>
    <string name="help_erp_distribution_value">Distribution-value:ozdělení pravděpodobnosti v [%], počet bliknutí výstupu je odvozen z této hodnoty, mezi n-výstupů je rozděleno 100 %</string>
    <string name="help_erp_distribution_delay">Distribution-delay: ...</string>
    <string name="help_erp_brightness">Brightness: nastavuje jas v [%] pro jednotlivé výstupy, každý výstup může mít jinou hodnotu jasu</string>
    <string name="help_bci_fvep">popis BCI f-VEP...</string>
    <string name="help_bci_fvep_pulse_up">Pulse - UP: ...</string>
    <string name="help_bci_fvep_pulse_down">Pulse - DOWN: ...</string>
    <string name="help_bci_fvep_frequency">Frequency: ...</string>
    <string name="help_bci_fvep_duty_cycle">Duty cycle: hodonta v procentech (1-99), určuje délku pulzu při nastavení frekvence</string>
    <string name="help_bci_fvep_brightness">Brightness: ...</string>
    <string name="help_bci_tvep">popis BCI t-VEP...</string>
    <string name="help_bci_tvep_pattern_lenght">Pattern - lenght: ...</string>
    <string name="help_bci_tvep_pattern_skew">Pattern - skew: ...</string>
    <string name="help_bci_tvep_brightness">Brightness: ...</string>
    <string name="help_bci_tvep_info">Pattern pro jednotlivé výstupy: </string>
    <string name="help_bci_cvep">popis BCI c-VEP...</string>
    <string name="help_bci_cvep_info">Význam 32bit patternu: ...</string>
    <string name="help_bci_cvep_puls_skew">Bitový posun / Puls - skew: ...</string>
    <string name="help_bci_cvep_puls_lenght">Puls - Lenght: ...</string>
    <string name="help_bci_cvep_puls_brightness">Brightness: ...</string>
    <string name="help_rea">popis Reakčních experimentů...</string>
    <string name="help_rea_cycle_count">Cycle count: ...</string>
    <string name="help_rea_wait_fixed">Wait - fixed: ...</string>
    <string name="help_rea_wait_random">Wait - random: ...</string>
    <string name="help_rea_on_fail">On fail = Continue: ..., Wait: ...</string>
    <string name="help_rea_sex">Vyznam pohlavi: ...</string>
    <string name="help_rea_A">A: ...</string>
    <string name="help_rea_W">W: ...</string>
    <string name="help_rea_H">H: ...</string>
</resources>