<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Experimenty">
        <menu>
        <item
            android:id="@+id/nav_item_1"
            android:title="@string/nav_text_item_1"/>
        <item
            android:id="@+id/nav_item_2"
            android:title="@string/nav_text_item_2"/>
        <item
            android:id="@+id/nav_item_3"
            android:title="@string/nav_text_item_3"/>
        <item
            android:id="@+id/nav_item_4"
            android:title="@string/nav_text_item_4"/>
        <item
            android:id="@+id/nav_item_5"
            android:title="@string/nav_text_item_5"/>
        <item
            android:id="@+id/nav_item_6"
            android:title="@string/nav_text_item_6"/>
        </menu>
    </item>
    <item android:title="Možnosti">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_text_settings"
                android:icon="@android:drawable/ic_menu_manage"/>
        </menu>
    </item>
</menu>